--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
     background-color: darkgrey;
     border-radius: 15px;
     border: 1px solid black;
@@ -11,13 +12,12 @@
     /* margin-top: 2px; */
     margin-bottom: 2px;
 
-    height: 50px;
+    height: 28px;
 
 }
 
 .replaceSearch{
     width: 235px;
-
 }
 
 .formContainer {
