--- a/src/components/SelectorActivity/SelectorActivity.module.css
+++ b/src/components/SelectorActivity/SelectorActivity.module.css
@@ -11,6 +11,8 @@
     margin-top: 2px;
     margin-bottom: 2px;
 
+    color: #310336;
+
     /* background: linear-gradient(135deg, #0099cc, #66ccff); */
     background-color: darkgrey;
     border-radius: 15px;
