--- a/src/components/SelectorSortAlphabetical/SelectorSortAlphabetical.module.css
+++ b/src/components/SelectorSortAlphabetical/SelectorSortAlphabetical.module.css
@@ -6,6 +6,8 @@
     padding-left: 20px;
     padding-right: 20px;
 
+    color: #310336;
+
     margin-left: 5px;
     margin-right: 5px;
     margin-top: 2px;
