--- a/src/views/Form/Form.module.css
+++ b/src/views/Form/Form.module.css
@@ -3,7 +3,10 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    width: 100vw;
     height: 100vh; /* para ocupar toda la altura de la ventana */
+    color: #310336
+
   }
 
   .formulario{
