add 'README.md', edit background 'Home', edit details

--- a/src/views/Home/Home.module.css
+++ b/src/views/Home/Home.module.css
@@ -9,11 +9,14 @@
   margin-right: 20px;
 }
 
-.imagenFondo {
-  background-image: url("./planisferio3.jpg");
+.background {
+  display: flex;
+  background-image: url("../../assets/planisferio3.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  width: 100vw;
-  height: 100vh; /* para ocupar toda la altura de la ventana */
+  min-height: 100vh;
+  padding: 2rem;
+  box-sizing: border-box;
+  /* filter: hue-rotate(180deg); */
 }
