--- a/src/components/Paginado/Paginado.module.css
+++ b/src/components/Paginado/Paginado.module.css
@@ -7,24 +7,14 @@
   border: 1px solid black;
 }
 
-.numeroStyle {
-  text-decoration: none;
-  color: #000000; /* color sólido */
-  cursor: pointer;
-  padding: 0;
-  font-size: 16px;
-  line-height: 20px;
+.widthMain {
+  max-width: 1500px;
+  margin: 0 auto;
 }
 
-.numeroContainer {
-  margin-right: 5px;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.5); /* color de fondo semitransparente */
+.container {
+  display: flex;
+  justify-content: center; /* Centrado horizontal */
 }
 
 .selectores{
@@ -39,7 +29,22 @@
   align-items: center;
 }
 
-.container {
-  display: flex;
-  justify-content: center; /* Centrado horizontal */
+.numeroContainer {
+  margin-right: 5px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.5); /* color de fondo semitransparente */
+}
+
+.numeroStyle {
+  text-decoration: none;
+  color: #000000; /* color sólido */
+  cursor: pointer;
+  padding: 0;
+  font-size: 16px;
+  line-height: 20px;
 }
