--- a/src/views/Landing/Landing.module.css
+++ b/src/views/Landing/Landing.module.css
@@ -19,4 +19,23 @@
 
   h1 {
     margin-top: 0;
+	/* -webkit-text-stroke: 3px black;  */
+  }
+
+  .background {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	/* color: #310336; */
+
+	background-image: url("../../assets/planisferio.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	min-height: 100vh;
+	padding: 2rem;
+	box-sizing: border-box;
+	color: #310336;
+	/* filter: hue-rotate(180deg); */
   }
