--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,22 +1,76 @@
 .card{
-    border: 1px solid black;
-    width: fit-content;
-    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    height: 100%;
+
+    border: 2px solid #659ccb;
     border-radius: 10px;
 
-    backdrop-filter: blur(90px);
+    background-color: #121e2d;
 
-    color: #310336;
-
-    /* padding: 2px; */
+    position: relative;
+    box-sizing: border-box;
     overflow: hidden;
 }
-
-.boldText {
-    font-weight: bold; /* Hacer que el texto esté en negrita */
-  }
 
 p {
     margin: 0px;
     padding: 0px;
+}
+
+.cardImage {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-self: center;
+    width: 100%;
+    height: 170px;
+    background-color: #233c57;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.cardDecoration {
+    position: absolute;
+    width: 0.5rem;
+    height: 100%;
+    background-color: #f16c65;
+    align-self: flex-start;
+    border-radius: 10px 0 0 10px;
+}
+
+.link {
+    width: 100%;
+    height: 100%;
+}
+
+.imageBorder {
+    display: block;
+    flex-direction: column;
+    align-self: center;
+    padding: 15px;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.image {
+
+    width: 100%;
+    height: 100%;
+    object-fit: scale-down;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+.cardInfo {
+    /* max-width: 100%; */
+    padding: 2rem 1rem;
+}
+
+.countryName {
+    font-size: 2rem;
 }
