--- a/src/components/Paginado/Paginado.module.css
+++ b/src/components/Paginado/Paginado.module.css
@@ -8,25 +8,42 @@
 }
 
 .widthMain {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   max-width: 1500px;
   margin: 0 auto;
 }
 
-.container {
-  display: flex;
-  justify-content: center; /* Centrado horizontal */
+.gridContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 70%;
+  gap: 0.3rem;
 }
 
 .selectores{
-  /* display: flex; */
-  margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+  /* margin-right: 10px; */
   align-items: center;
+  gap: 0.3rem;
 }
 
-.selectoresLinea {
+.gridItem01{
+  grid-column: span 2;
+  /* display: flex;
+  width: 100%; */
+}
+
+.selecOrder {
   display: flex;
-  margin-right: 10px;
+  /* margin-right: 10px; */
+  justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
+  /* gap: 0.3rem; */
 }
 
 .numeroContainer {
@@ -37,14 +54,27 @@
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.5); /* color de fondo semitransparente */
+  background-color: #121e2d;
+  border: 2px solid #659ccb;
 }
 
 .numeroStyle {
   text-decoration: none;
-  color: #000000; /* color sólido */
+  color: #00d3c1;
   cursor: pointer;
   padding: 0;
-  font-size: 16px;
-  line-height: 20px;
+  /* font-size: 1rem; */
+  /* line-height: 20px; */
+}
+
+@media screen and (max-width: 1000px) {
+  .gridContainer {
+    grid-template-columns: 1fr; /* Cambia a una sola columna */
+  }
+
+  .gridItem01{
+    grid-column: span 1;
+    /* display: flex;
+    width: 100%; */
+  }
 }
