--- a/src/components/SelectorContinent/SelectorContinent.module.css
+++ b/src/components/SelectorContinent/SelectorContinent.module.css
@@ -1,36 +1,41 @@
-:root {
-  --color-text: #310336; /* Variable personalizada */
+.mainContainer {
+  position: relative;
+  background-color: #121e2d;
+  border-radius: 10px;
+  border: 2px solid #659ccb;
 }
 
-
 .container {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 730px;
-    padding-right: 20px;
-    padding-left: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  /* width: 100%; */
+  padding: 5px;
 
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-top: 2px;
-    margin-bottom: 2px;
+  box-sizing: border-box;
+}
 
-    background-color: darkgrey;
-    border-radius: 15px;
-    border: 1px solid black;
-
-  }
+.cardDecoration {
+  position: absolute;
+  width: 0.5rem;
+  height: 100%;
+  background-color: #f16c65;
+  align-self: flex-start;
+  border-radius: 10px 0 0 10px;
+}
 
   .leftElement {
     flex: 1; /* Ocupar todo el espacio disponible */
     text-align: right; /* Alinear a la izquierda */
     color: var(--color-text);
     padding-right: 5px;
+    font-size: 2em;
   }
 
   .rightElement {
     flex: 1; /* Ocupar todo el espacio disponible */
     text-align: left; /* Alinear a la derecha */
     padding-left: 5px;
+
   }
