--- a/src/components/SelectorSortPopulation/SelectorSortPopulation.module.css
+++ b/src/components/SelectorSortPopulation/SelectorSortPopulation.module.css
@@ -1,20 +1,30 @@
+.mainContainer {
+  position: relative;
+  background-color: #121e2d;
+  border-radius: 10px;
+  border: 2px solid #659ccb;
+}
+
+.cardDecoration {
+  position: absolute;
+  width: 0.5rem;
+  height: 100%;
+  background-color: #f16c65;
+  align-self: flex-start;
+  border-radius: 10px 0 0 10px;
+}
+
 .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 340px;
-    padding-left: 20px;
-    padding-right: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* min-width: 48%; */
+  height: 100%;
+  padding: 5px;
+  padding-left: 10px;
+  box-sizing: border-box;
 
-    color: #310336;
-
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-top: 2px;
-    margin-bottom: 2px;
-
-    /* background: linear-gradient(135deg, #0099cc, #66ccff); */
-    background-color: darkgrey;
-    border-radius: 15px;
-    border: 1px solid black;
-  }
+  /* background-color: #121e2d;
+  border-radius: 10px;
+  border: 2px solid #659ccb; */
+}
