--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,11 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+
+  font-family: "Concert One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #00d3c1;
 }
 
 h1 {
@@ -53,6 +58,19 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+select {
+  padding: 0.5rem;
+  font-family: "Concert One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  border-radius: 5px;
+  background-color: #233c57;
+  font-size: 1rem;
+
+  color: #00d3c1;
+  border: 1px solid #659ccb;
 }
 
 @media (prefers-color-scheme: light) {
