--- a/src/views/Landing/Landing.module.css
+++ b/src/views/Landing/Landing.module.css
@@ -19,7 +19,6 @@
 
   h1 {
     margin-top: 0;
-	/* -webkit-text-stroke: 3px black;  */
   }
 
   .background {
@@ -36,6 +35,19 @@
 	min-height: 100vh;
 	padding: 2rem;
 	box-sizing: border-box;
-	color: #310336;
+	/* color: #310336; */
 	/* filter: hue-rotate(180deg); */
+
+}
+
+.title {
+    /* Grosor del contorno */
+    -webkit-text-stroke-width: 3px;
+    /* Color del contorno */
+    -webkit-text-stroke-color: #233c57;
+
   }
+
+.button {
+  color: #f16c65;
+}
