--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -10,6 +10,11 @@
     border: 2px solid #659ccb;
   }
 
+  .numeroContainerActive {
+    background-color: #121e2d;
+    border: 2px solid #659ccb;
+  }
+
   .numeroStyle {
     text-decoration: none;
     color: #00d3c1;
@@ -17,4 +22,8 @@
     padding: 0;
     /* font-size: 1rem; */
     /* line-height: 20px; */
+  }
+
+  .numeroActive {
+    color: #f16c65;
   }
