set config local/api data files; set Detail data

--- a/src/views/Landing/Landing.module.css
+++ b/src/views/Landing/Landing.module.css
@@ -49,5 +49,10 @@
   }
 
 .button {
+  display: flex;
+  flex-direction: row;
+
+  background-color: #121e2d;
   color: #f16c65;
+  align-items: baseline;
 }
