--- a/src/components/Paginado/HeroData.module.css
+++ b/src/components/Paginado/HeroData.module.css
@@ -1,8 +1,15 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    max-width: 1500px;
-    margin: 0 auto;
-  }
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	min-width: 1300px;
+	/* width: 100%; */
+	margin: 0 auto;
+}
+
+@media screen and (max-width: calc(1300px + 32px + 32px)) {
+	.container {
+		min-width: 100%;
+	}
+}
