--- a/src/components/SelectorGrouper/SelectorGrouper.module.css
+++ b/src/components/SelectorGrouper/SelectorGrouper.module.css
@@ -18,3 +18,27 @@
     /* display: flex;
     width: 100%; */
 }
+
+@media screen and (max-width: 850px) {
+    .gridContainer {
+        display: grid;
+        grid-template-columns: 1fr;
+        max-width: 70%;
+        gap: 0.3rem;
+    }
+
+    .gridItem01 {
+        grid-column: span 1;
+        /* display: flex;
+        width: 100%; */
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .gridContainer {
+        display: grid;
+        grid-template-columns: 1fr;
+        max-width: 100%;
+        gap: 0.3rem;
+    }
+}
