--- a/src/views/Detail/Detail.module.css
+++ b/src/views/Detail/Detail.module.css
@@ -1,12 +1,137 @@
-.imagenFondo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-    background-image: url("./planisferio4.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    width: 100vw;
-    height: 100vh; /* para ocupar toda la altura de la ventana */
-  }
+/* :root {
+	--cardDetail-width: 758px;
+  } */
+
+.background {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background-image: url("../../assets/backgrounds/planisferio4.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	width: 100%;
+	min-height: 100vh;
+	padding: 1rem;
+	box-sizing: border-box;
+}
+
+.card {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+
+	/* height: 100%; */
+	min-width: 760px;
+	/* min-width: 700px; */
+	/* width: 100%; */
+
+	border: 2px solid #659ccb;
+	border-radius: 10px;
+
+	background-color: #121e2d;
+
+	position: relative;
+	box-sizing: border-box;
+	overflow: hidden;
+
+	padding: 1rem;
+}
+
+.mainGrid {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	/* grid-template-columns: repeat(2, 1fr); */
+	gap: 1rem;
+	/* height: 100%; */
+}
+
+.imageCards {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-self: center;
+	width: 100%;
+	box-sizing: border-box;
+	gap: 0.5rem;
+}
+
+.infoCards {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 100%;
+	box-sizing: border-box;
+	gap: 0.5rem;
+}
+
+.cardImage {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-self: center;
+	width: 100%;
+	height: 170px;
+	background-color: #233c57;
+	/* background-color: #ffffff; */
+	box-sizing: border-box;
+	position: relative;
+	border-radius: 10px;
+}
+
+.cardDecoration {
+	position: absolute;
+	width: 0.5rem;
+	height: 100%;
+	background-color: #f16c65;
+	align-self: flex-start;
+	border-radius: 10px 0 0 10px;
+}
+
+.nameContinent {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	position: absolute;
+	padding: 0.5rem 0 0 1rem;
+	/* color: #00d3c1 ; */
+
+	/* -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #121e2d; */
+	mix-blend-mode: exclusion;
+}
+
+.spanContinent {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	position: absolute;
+}
+
+.imageBorder {
+	display: block;
+	flex-direction: column;
+	align-self: center;
+	padding: 1rem 15px 15px 15px;
+	box-sizing: border-box;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.image {
+
+	width: 100%;
+	height: 100%;
+	object-fit: scale-down;
+	box-sizing: border-box;
+}
+
+@media screen and (max-width: 760px) {
+	.card {
+
+		min-width: 100%;
+
+	}
+}
