--- a/src/views/Home/Home.module.css
+++ b/src/views/Home/Home.module.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
 
-  background-image: url("../../assets/planisferio3.jpg");
+  background-image: url("../../assets/backgrounds/planisferio3.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
