--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,39 +1,22 @@
-.mainContainer{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: darkgrey;
-    border-radius: 15px;
-    border: 1px solid black;
+.mainContainer {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	position: relative;
 
-    margin-left: 5px;
-    margin-right: 5px;
-    /* margin-top: 2px; */
-    margin-bottom: 2px;
-
-    height: 28px;
-
+	background-color: #121e2d;
+	border-radius: 10px;
+	border: 2px solid #659ccb;
+	z-index: 99;
+	padding: 0.3rem 5%;
+	box-sizing: border-box;
+	margin-bottom: 0.5rem;
 }
 
-.replaceSearch{
-    width: 235px;
+@media screen and (max-width: 484px) {
+	.mainContainer{
+		justify-content: center;
+	}
 }
-
-.formContainer {
-    display: flex;
-    align-items: center; /* Centra verticalmente los elementos dentro del contenedor */
-  }
-
-  /* Estilo para el input */
-  input {
-    /* Puedes ajustar el ancho del input según tus necesidades */
-    width: 150px; /* Por ejemplo, 150px */
-    margin-right: 10px; /* Espacio entre el input y el botón */
-  }
-
-/* button {
-    height: 20px;
-    display: flex;
-    align-items: center;
-} */
