--- a/src/components/Loading/Loading.module.css
+++ b/src/components/Loading/Loading.module.css
@@ -1,24 +1,40 @@
 .spinneContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+}
 
-  .spinner {
-    width: 80px;
-    height: 80px;
-    border: 10px solid rgba(0, 0, 0, 0.1);
-    border-top-color: #333;
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-  }
+.spinner {
+	width: 80px;
+	height: 80px;
+	border: 10px solid rgba(0, 0, 0, 0.1);
+	border-top-color: #333;
+	border-radius: 50%;
+	animation: spin 1s linear infinite;
+}
 
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
+.litleSpinneContainer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.litleSpinner {
+	width: 30px;
+	height: 30px;
+	border: 5px solid rgba(102, 102, 102, 0.5);
+	border-top-color: #8d8b8b;
+	border-radius: 50%;
+	animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+
+	100% {
+		transform: rotate(360deg);
+	}
+}
