--- a/src/views/CreateActivity/childComponent/CreateActivityData.module.css
+++ b/src/views/CreateActivity/childComponent/CreateActivityData.module.css
@@ -3,4 +3,32 @@
 	background-color: #121e2d;
 	border-radius: 10px;
 	border: 2px solid #659ccb;
+	position: relative;
+	/* Agregamos posición relativa para que los elementos absolutos sean relativos a este contenedor */
+}
+
+.buttonContainer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.buttonCapsule {
+	width: fit-content;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+}
+
+.SmallLoading {
+	/* background-color: red; */
+	position: absolute;
+	left: 125%;
+	/* Coloca SmallLoading a la izquierda del botón */
+	top: 50%;
+	/* Centra verticalmente respecto al botón */
+	transform: translateY(-50%);
+	/* Ajusta la posición vertical */
 }
