--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -13,6 +13,7 @@
 	padding: 0.3rem 5%;
 	box-sizing: border-box;
 	margin-bottom: 0.5rem;
+	width: 100%;
 }
 
 @media screen and (max-width: 484px) {
