--- a/src/components/PillsData/PillsData.module.css
+++ b/src/components/PillsData/PillsData.module.css
@@ -16,6 +16,8 @@
     flex-direction: row;
     border: 2px solid #659ccb;
     border-radius: 5px;
+    box-sizing: border-box;
+    height: 100%;
 }
 
 .contentImage {
@@ -59,4 +61,14 @@
     width: 100%;
     padding-left: 1rem;
     box-sizing: border-box;
+}
+
+.component {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 1rem;
 }
