--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,16 @@ h1 {
   line-height: 1.1;
 }
 
+input {
+  background-color: #233c57;
+  height: 1.5rem;
+  border-radius: 5px;
+}
+
+input:hover {
+  background-color: #659ccb;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
