--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -6,9 +6,9 @@
 	justify-content: space-between;
 	position: relative;
 
-	background-color: #121e2d;
+	background-color: var(--color-background-01);
 	border-radius: 10px;
-	border: 2px solid #659ccb;
+	border: 2px solid var(--color-border);
 	z-index: 99;
 	padding: 0.3rem 5%;
 	box-sizing: border-box;
