--- a/src/index.css
+++ b/src/index.css
@@ -1,97 +1,117 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+	line-height: 1.5;
+	font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+	color-scheme: light dark;
+	color: rgba(255, 255, 255, 0.87);
+	background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-text-size-adjust: 100%;
+
+	--color-text: #00d3c1;
+	--color-background-01: #121e2d;
+	--color-background-02: #233c57;
+	--color-background-03: #28517c;
+	--color-background-04: #659ccb;
+	--color-border: #659ccb;
+	--color-decoration-01: #f16c65;
+	/* --color-decoration-02: #00bb2d; */
+	/* --color-decoration-02: #f07706; */
+	--color-decoration-02: #cc5218;
+
+	--border-radius-01: 10px;
+	--border-radius-02: 5px;
+
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+	font-weight: 500;
+	/* color: #646cff; */
+	text-decoration: inherit;
 }
-a:hover {
+
+/* a:hover {
   color: #535bf2;
-}
+} */
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+	margin: 0;
+	display: flex;
+	place-items: center;
+	min-width: 320px;
+	min-height: 100vh;
 
-  font-family: "Concert One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: #00d3c1;
+	font-family: "Concert One", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+	color: #00d3c1;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+	font-size: 3.2em;
+	line-height: 1.1;
 }
 
 input {
-  background-color: #233c57;
-  height: 1.5rem;
-  border-radius: 5px;
+	background-color: #233c57;
+	height: 1.5rem;
+	border-radius: 5px;
 }
 
 input:hover {
-  background-color: #659ccb;
+	background-color: var(--color-background-03);
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+	border-radius: 8px;
+	border: 1px solid transparent;
+	padding: 0.6em 1.2em;
+	font-size: 1em;
+	font-weight: 500;
+	font-family: inherit;
+	background-color: #1a1a1a;
+	cursor: pointer;
+	transition: border-color 0.25s;
 }
+
 button:hover {
-  border-color: #646cff;
+	border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+	outline: 4px auto -webkit-focus-ring-color;
 }
 
 select {
-  padding: 0.5rem;
-  font-family: "Concert One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  border-radius: 5px;
-  background-color: #233c57;
-  font-size: 1rem;
+	padding: 0.5rem;
+	font-family: "Concert One", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+	border-radius: 5px;
+	background-color: #233c57;
+	font-size: 1rem;
 
-  color: #00d3c1;
-  border: 1px solid #659ccb;
+	color: #00d3c1;
+	border: 1px solid #659ccb;
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+	:root {
+		color: #213547;
+		background-color: #ffffff;
+	}
+
+	a:hover {
+		color: #747bff;
+	}
+
+	button {
+		background-color: #f9f9f9;
+	}
 }
