--- a/src/views/Detail/Detail.module.css
+++ b/src/views/Detail/Detail.module.css
@@ -27,10 +27,10 @@
 	/* min-width: 700px; */
 	/* width: 100%; */
 
-	border: 2px solid #659ccb;
+	border: 2px solid var(--color-border);
 	border-radius: 10px;
 
-	background-color: #121e2d;
+	background-color: var(--color-background-01);
 
 	position: relative;
 	box-sizing: border-box;
@@ -73,7 +73,7 @@
 	align-self: center;
 	width: 100%;
 	height: 170px;
-	background-color: #233c57;
+	background-color: var(--color-background-02);
 	/* background-color: #ffffff; */
 	box-sizing: border-box;
 	position: relative;
@@ -84,7 +84,7 @@
 	position: absolute;
 	width: 0.5rem;
 	height: 100%;
-	background-color: #f16c65;
+	background-color: var(--color-decoration-01);
 	align-self: flex-start;
 	border-radius: 10px 0 0 10px;
 }
@@ -95,10 +95,10 @@
 	justify-content: flex-start;
 	position: absolute;
 	padding: 0.5rem 0 0 1rem;
-	/* color: #00d3c1 ; */
+	/* color: var(--color-decoration-01) ; */
 
 	/* -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #121e2d; */
+    -webkit-text-stroke-color: var(--color-background-01); */
 	mix-blend-mode: exclusion;
 }
 
