--- a/src/views/Landing/Landing.module.css
+++ b/src/views/Landing/Landing.module.css
@@ -42,7 +42,7 @@
 }
 
 .title {
-  color: #121e2d;
+  color: var(--color-background-01);
   /* mix-blend-mode: difference; */
     /* Grosor del contorno */
     -webkit-text-stroke-width: 1px;
@@ -55,7 +55,7 @@
   display: flex;
   flex-direction: row;
 
-  background-color: #121e2d;
-  color: #f16c65;
+  background-color: var(--color-background-01);
+  color: var(--color-decoration-01);
   align-items: baseline;
 }
