--- a/src/views/AssignActivity/childrenComponents/ListCountries.module.css
+++ b/src/views/AssignActivity/childrenComponents/ListCountries.module.css
@@ -8,3 +8,11 @@
     /* width: 100%; */
     /* margin: 0 auto; */
 }
+
+.containerDropDown {
+    width: 100%;
+}
+
+.dropdown {
+    width: 100%;
+}
