--- a/src/views/AssignActivity/childrenComponents/StatusNotifications.module.css
+++ b/src/views/AssignActivity/childrenComponents/StatusNotifications.module.css
@@ -1,6 +1,27 @@
-.messagesText {
+.container {
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: center;
+    height: 3rem;
+    background-image: linear-gradient(to right, var(--color-background-01), var(--color-background-02), var(--color-background-01));
+    margin-bottom: 1.5rem;
 
+    border-top: 3px solid;
+    border-bottom: 3px solid;
+    border-image: linear-gradient(to right, var(--color-background-01), var(--color-background-02), var(--color-background-01));
+}
+
+
+
+.blink {
+    border-top: 3px solid;
+    border-bottom: 3px solid;
+    border-image: linear-gradient(to right, var(--color-background-01), #ffffaa, var(--color-background-01)) 1;
+}
+
+.messagesText {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
